# negi-ms

./: .env.example  .gitignore  Cargo.toml  README.md  category_map.csv  clerk-fe-public  justfile
.devcontainer/: devcontainer.json
clerk-fe/src/views/: FormView.vue
doc/: Sheet.md  Sheet.xlsx  architecture.excalidraw
src/: lib.rs  log.rs  main.rs  transaction.rs  types.rs
src/mail/: cleaner.rs  mod.rs  reader.rs
src/mail/parsers/: gemini.rs  mod.rs  ocbc.rs  rakuten_card.rs  rakuten_pay.rs
src/network/: dummies.rs  mod.rs  reqwest_client.rs
src/sheet/: auth.rs  fetch.rs  mod.rs  write.rs
