[package]
name = "negi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.1"
dotenv = "0.15.0"
mailparse = "0.15.0"
notify = "8.0.0"
regex = "1.11.1"
reqwest = "0.12.12"
rust_decimal = "1.36.0"
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
yup-oauth2 = "12.0.0"
