[package]
name = "negi"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
mailparse = "0.15.0"
notify = "8.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
rust_decimal = "1.36.0"
scraper = "0.22.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
yup-oauth2 = "12.0.0"
